--- a/k8s-proj/les-01-argocd/application.yaml
+++ b/k8s-proj/les-01-argocd/application.yaml
@@ -2,7 +2,11 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: myapp-argo-application
-  namespace: argocd
+  annotations:
+    argocd-image-updater.argoproj.io/image-list: nginx=nginx
+    argocd-image-updater.argoproj.io/write-back-method: git:secret:default/git-creds
+    argocd-image-updater.argoproj.io/git-branch: master
+    argocd-image-updater.argoproj.io/myalias.force-update: "true"
 spec:
   project: default
 
